add bulk operations for fetch, create and delete; security fixes
